--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@emailjs/browser": "^3.6.2",
+    "@juggle/resize-observer": "^3.3.1",
     "@react-three/cannon": "^4.7.0",
     "@react-three/drei": "^8.10.7",
+    "@react-three/fiber": "^7.0.27",
     "@react-three/postprocessing": "^2.1.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -15,15 +18,22 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.23",
+    "@zappar/zappar": "^0.3.17",
+    "@zappar/zappar-react-three-fiber": "^1.2.4",
+    "aframe": "^1.3.0",
+    "aframe-react": "^4.4.0",
     "axios": "^0.26.1",
+    "babel-polyfill": "^6.26.0",
     "dotenv": "^16.0.0",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-three-fiber": "^6.0.13",
     "styled-components": "^5.3.3",
-    "three": "^0.138.0",
+    "three": "^0.139.1",
     "three-stdlib": "^2.8.7",
     "three-to-cannon": "^4.0.2",
     "typescript": "^4.5.5",
@@ -31,8 +41,8 @@
     "zustand": "^3.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-	"start-d": "(react-scripts start&)",
+    "start": "HTTPS=true react-app-rewired start",
+    "start-d": "(react-scripts start&)",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,6 +67,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
-    "@types/three": "^0.137.0"
-  }
+    "@types/three": "^0.139.0"
+  },
+  "homepage": "."
 }
