--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "dotenv": "^16.0.0",
     "graphql": "^16.5.0",
+    "netcat": "^1.5.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
